--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ propcache==0.3.1
 pydantic==2.11.5
 pydantic_core==2.33.2
 python-dotenv==1.1.0
+pytz==2025.2
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 tzlocal==5.3.1
