--- a/requirements.txt
+++ b/requirements.txt
@@ -9,14 +9,17 @@ APScheduler==3.11.0
 attrs==25.3.0
 certifi==2025.4.26
 frozenlist==1.6.2
+holidays==0.75
 idna==3.10
 magic-filter==1.0.12
 multidict==6.4.4
 propcache==0.3.1
 pydantic==2.11.5
 pydantic_core==2.33.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
+six==1.17.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 tzlocal==5.3.1
