test: Добавлена полная система тестирования
🧪 Автоматические тесты:
- pytest.ini - конфигурация pytest
- conftest.py - фикстуры (temp_db, test_db, populated_db, моки)
- test_utils.py - 10 unit тестов для utils.py
- test_config.py - 12 тестов конфигурации
- test_db.py - 15 integration тестов для БД

📋 Ручное тестирование:
- TEST_CASES.md - 33 детальных тест-кейса
- TESTING.md - полное руководство по тестированию
- run_tests.sh - скрипт для удобного запуска

🔧 Дополнительно:
- requirements-dev.txt - зависимости для разработки
- Обновлен .gitignore (coverage, pytest_cache, IDE)

✨ Покрытие:
- Unit тесты для всех утилит
- Integration тесты для БД
- Моки для Telegram API
- Тесты с временными БД

📚 Документация:
- Инструкции по запуску
- Примеры написания тестов
- Troubleshooting
- CI/CD примеры

Готово к локальному тестированию: ./run_tests.sh

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,22 @@ __pycache__/
 bot.db
 bot.log
 
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+*.db-journal
+*.db-wal
+*.db-shm
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
