Use apt packages for docker python deps

--- a/deployment/ansible/deploy.yml
+++ b/deployment/ansible/deploy.yml
@@ -33,19 +33,11 @@
           - git
           - python3
           - python3-pip
+          - python3-docker
+          - python3-requests-unixsocket
           - acl  # для ansible become_user
         state: present
       when: ansible_os_family == "Debian"
-
-    - name: Установка Python-зависимостей для community.docker
-      pip:
-        name:
-          - docker
-          - requests
-          - requests-unixsocket
-        executable: pip3
-        state: present
-      become: yes
 
     # ============================================================
     # 2. УСТАНОВКА DOCKER
